# immer-rs

./: .gitmodules  Cargo.toml  README.md  build.rs
src/: bindings.rs  lib.rs  wrapper.hpp
