[package]
name = "immer-rs"
version = "0.1.2"
authors = ["Riley Wilburn <rhino1998@gmail.com>"]
license = "BSL-1.0"
homepage = "https://github.com/rhino1998/immer-rs"
repository = "https://github.com/rhino1998/immer-rs"
documentation = "https://github.com/rhino1998/immer-rs"
description = "A wrapper around the C++ library immer for persistent datastructures"

[dependencies]
libc = "0.2"

[build-dependencies]
cc = "1"
